src/objects/BEN_Category_User_Permission__c.object
<CustomObject>
    <description>Junction object between Master category and user objects</description>
    <fields>
        <fullName>BEN_Category_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BEN_Category_User_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category_Master__c</fullName>
        <label>Category Master</label>
        <referenceTo>BEN_Category_Master__c</referenceTo>
        <relationshipLabel>Category User Permissions</relationshipLabel>
        <relationshipName>Category_User_Permissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pkl_Category_Access__c</fullName>
        <label>Category Access</label>
        <picklist>
            <controllingField>pkl_User_Type__c</controllingField>
            <picklistValues>
                <fullName>Viewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_User_Type__c</fullName>
        <label>User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Category - Restricted Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Category</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Category User Permission</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BEN_All_Categories</fullName>
        <columns>NAME</columns>
        <columns>Category_Master__c</columns>
        <columns>BEN_Category_User__c</columns>
        <columns>pkl_User_Type__c</columns>
        <columns>pkl_Category_Access__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Categories</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Category User Permission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Category User Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>